--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "express-validator": "^2.20.4",
     "jade": "^1.11.0",
     "jsonwebtoken": "^5.7.0",
+    "material-ui": "^0.17.1",
     "moment": "^2.12.0",
     "mongoose": "^4.4.8",
     "morgan": "^1.7.0",
     "nodemailer": "^2.3.0",
-    "react": "15.1.0",
+    "react": "15.4.0",
+    "react-bootstrap": "^0.30.8",
     "react-cookie": "^0.4.5",
-    "react-dom": "15.1.0",
+    "react-dom": "15.4.0",
     "react-redux": "4.4.1",
     "react-router": "^2.4.0",
+    "react-tap-event-plugin": "^2.0.1",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.4",
