--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.4",
     "redux": "^3.3.1",
+    "redux-devtools-extension": "^2.13.0",
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.0.1",
