--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "async": "^1.5.2",
+    "autoprefixer-core": "^6.0.1",
     "axios": "^0.16.1",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
@@ -19,10 +20,12 @@
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
-    "cookie-parser": "^1.4.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "express-validator": "^2.20.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.11.1",
+    "image-webpack-loader": "^3.3.1",
     "jade": "^1.11.0",
     "jsonwebtoken": "^5.7.0",
     "material-ui": "^0.17.1",
@@ -30,12 +33,15 @@
     "mongoose": "^4.4.8",
     "morgan": "^1.7.0",
     "nodemailer": "^2.3.0",
+    "radium": "^0.19.1",
     "react": "15.4.0",
     "react-bootstrap": "^0.30.8",
     "react-cookie": "^0.4.5",
     "react-dom": "15.4.0",
+    "react-onclickoutside": "^5.11.1",
     "react-player": "^0.15.0",
     "react-redux": "4.4.1",
+    "react-responsive": "^1.3.0",
     "react-router": "^2.4.0",
     "react-tap-event-plugin": "^2.0.1",
     "react-transform-catch-errors": "^1.0.2",
@@ -52,7 +58,6 @@
     "webpack-hot-middleware": "^2.10.0",
     "whatwg-fetch": "^0.11.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": "6.1.0"
   }
