--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-responsive": "^1.3.0",
     "react-router": "^2.4.0",
     "react-tap-event-plugin": "^2.0.1",
+    "react-tooltip": "^3.3.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.4",
